[gd_scene load_steps=6 format=2]

[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/characters/marble/marble_monitor.gd" type="Script" id=1]
[ext_resource path="res://projectiles/slash/sprites/slash_0000.png" type="Texture" id=2]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/characters/marble/marble_exploding_effect.tres" type="Resource" id=3]
[ext_resource path="res://overlap/hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
exploding_effect = ExtResource( 3 )

[node name="Animation" type="Node2D" parent="."]

[node name="BonusTargetSprite" type="Sprite" parent="Animation"]
visible = false
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Animation"]
visible = false
texture = ExtResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.968627, 0, 1, 1 )
position = Vector2( 0, -25 )
collision_mask = 20

[node name="Collision" parent="Hurtbox" index="0"]
position = Vector2( 0, 13 )
shape = SubResource( 1 )

[node name="CastTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="CastTimer" to="." method="_on_CastTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]

[editable path="Hurtbox"]
